# labs-tg-bot

./: .gitignore  README.md  pyproject.toml
api/: README.md  schemas.py
api/alembic/: env.py
api/alembic/versions/: 1af3cd5b815f_change_user_and_file_connection.py  44695f3b687c_исправлена_обратная_ссылка_пользователя_.py  45864e2fd478_delete_is_from_api_lesson.py  73a7b8bd1813_added_enum_file_type_document_photo_.py  bfbfb2a46fb6_initial_migration.py
api/config/: project_config.py
api/src/: database.py  main.py  models.py  schemas.py
api/src/handlers/: auth_api_handler.py  discipline_api_handler.py  lab_api_handler.py  lesson_api_handler.py  settings_api_handler.py  teacher_api_handler.py
api/src/routers/: auth.py  auth_api_router.py  discipline_api_router.py  lab_api_router.py  lesson_api_router.py  settings_api_router.py  teacher.py  teacher_api_router.py
bot/: README.md
bot/src/: bot_unit.py  deepseek.py  main.py  settings.py
bot/src/handlers/: auth.py  auth_bot_handler.py  diagrams_bot_handler.py  discipline_bot_handler.py  lab_bot_handler.py  lesson_bot_handler.py  main.py  main_bot_handler.py  main_handler.py  settings_bot_handler.py  teacher.py  teacher_bot_handler.py  teacher_handler.py
bot/src/keyboards/: auth_keyboard.py  diagrams_keyboard.py  discipline_keyboard.py  lab_keyboard.py  lesson_keyboard.py  menu.py  menu_keyboard.py  settings_keyboard.py  teacher.py  teacher_keyboard.py
locales/: README.md  messages.pot
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/ru/LC_MESSAGES/: messages.mo  messages.po
(+4 files in other folders)
