[project]
name = "labs-tg-bot"
version = "0.1.0"
description = "Телеграм-бот для управления лабораторными работами"
authors = [
    {name = "Xsen-a",email = "malikina2003@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram (>=3.18.0,<4.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "babel (>=2.17.0,<3.0.0)",
    "aiogram-calendar (>=0.6.0,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
